# ChibiFicks

./: README.md  manage.py  pyproject.toml
anime/: anime_api.py  views.py
anime/static/anime/css/: style.css
anime/templates/anime/: index.html  player.html
chibiflix/: asgi.py  settings.py  urls.py  wsgi.py
